Fixed layout bugs and included more responsiveness tweaks

--- a/css/main.css
+++ b/css/main.css
@@ -13,18 +13,13 @@
   --bright-white: #FFFFFF;
 }
 
-@media (max-width: 1024px) {
+@media (max-width: 992px) {
   :root {
-    --fs-xl: 2.75rem;
-    --fs-600: 1.5rem;
-    --fs-500: 1.2rem;
-  }
-}
-
-@media (max-width: 640px) {
-  :root {
-    --fs-xl: 2rem;
-    --fs-600: 1.45rem;
+    --fs-xl: clamp(3rem, 9vw, 5rem);
+    --fs-600: 4rem;
+    --fs-500: 1.5rem;
+    --fs-400: 0.95rem;
+  --fs-300: 0.75rem;
   }
 }
 
@@ -320,7 +315,9 @@ nav .mono-text {
 
 
 /* 
+  ==============================
   WEBSITE STYLING ==============
+  ==============================
 */
 
 main section {
@@ -334,10 +331,9 @@ main section {
 }
 
 .hero-title {
-  position: relative;
-  max-width: 100%;
-  height: 100%;
-  text-align: right;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
 }
 
 .hero-title h1 {
@@ -359,20 +355,22 @@ main section {
 }
 
 .third {
+  display: flex;
   right: 0;
 }
 
 .dot-decor {
   position: absolute;
-  right: clamp(35vw, 40vw, 50vw);
-  top: 25vh;
+  left: -30%;
+  top: -30%;
   z-index: -1;
-
-  width: 10vw;
-  height: 10vw;
-  border-radius:250px;
-  font-size: clamp(3rem, 9vw, 9rem);
-  line-height: 10vw;
+  
+  /* Putting text inside a circle from: https://jsfiddle.net/rkEMR/ */
+  width: clamp(5rem, 13vw, 15vw);
+  height: clamp(5rem, 13vw, 15vw);
+  border-radius: 250px;
+  font-size: clamp(5rem, 9vw, 9rem);
+  line-height: clamp(5rem, 13vw, 15vw);
   text-align:center;
   color: var(--bright-white);
   background: var(--warm-orange);
@@ -381,13 +379,17 @@ main section {
 .about-description {
   position: absolute;
   margin-left: clamp(2rem, 10vw, 15rem);
-  top: 580px;
+  top: clamp(60vh, 80vh, 600px);
 }
 
 .mono-text {
   font-family: 'Roboto Mono', monospace;
   font-size: 0.8rem;
 }
+
+/* 
+  PROJECTS SECTION ========
+*/
 
 .hero-caption {
   position: absolute;
@@ -401,26 +403,30 @@ main section {
   margin-bottom: 15rem;
 }
 
+.projects-wrapper {
+  display: flex;
+}
+
 #projects h2 {
-  margin-bottom: 15rem;
+  margin-bottom: clamp(3rem, 10vw, 5rem);
+}
+
+.project h3 {
+  position: relative;
+  z-index: 999;
+  margin: 0;
+  top: -10px;
+  left: -50px;
 }
 
 .project2 {
   position: relative;
+  top: 20vh;
   left: 15vw;
 }
 
-.project2 h3 {
-  position: absolute;
-  z-index: 999;
-  margin: 0;
-  top: -40px;
-  left: -50px;
-}
-
 .project2 img {
-  width: 500px;
-  height: 600px;
+  width: clamp(33vw, 35vw, 40vw);
   object-fit: cover;
   object-position: 0 20%;
 }
@@ -432,34 +438,27 @@ main section {
 }
 
 .project1 img {
-  width: 600px;
-  height: 400px;
+  width: clamp(33vw, 40vw, 45vw);
   object-fit: cover;
-  object-position: 0 20%;
 }
 
-.project1 h3 {
-  position: absolute;
-  z-index: 999;
-  margin: 0;
-  top: -40px;
-  left: -50px;
-}
-
-#contact {
-  margin: 2rem
-}
+/* 
+  CONTACT SECTION =========
+*/
 
 #contact {
   display: flex;
-  width: fit-content;
+  gap: 3rem;
   justify-content: flex-end;
-  align-items: end;
+  align-items: flex-end;
 }
 
-#contact h2{
+#contact h2 {
   margin-bottom: 0;
-  margin-right: 3rem;
+}
+
+.info p {
+  min-width: 0;
 }
 
 .info {
@@ -478,7 +477,8 @@ main section {
 
 .project-hero {
   display: flex;
-  gap: clamp(5vw, 15vw, 30vw);
+  /* gap: clamp(5vw, 15vw, 30vw); */
+  justify-content: space-around;
   max-width: 100vw;
   margin-bottom: clamp(10vw, 15vw, 15rem);
   overflow: hidden;
